--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-image: url("/background.webp");
+  background-image: url("https://cdn1.d5v.cc/CDN/Image/Background.webp");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
